# smooblue

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  README.md  RELEASING.md  SECURITY.md  install.sh  package.json  pnpm-lock.yaml  release-plz.toml
.changeset/: README.md  cask-postflight-quarantine.md  config.json  linux-installer.md  notif-and-typing-fixes.md  one-line-installer.md  paste-image-from-clipboard.md  quote-on-top.md  readme-linux-instructions.md  release-notes-install-instructions.md  release-pipeline-smoke-test.md  scroll-no-blank-flash.md  search-live-results.md  security-doc-post-auth.md  security-doc.md  smoo-ai-promo.md  thread-scroll-perf.md  tighten-action-row.md  via-repost-subjects.md
.claude/commands/: resume-status.md  save-status.md
.githooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: dependabot.yml
.github/workflows/: changesets.yml  ci.yml  nightly.yml  release.yml
.smooth/dolt/pearls/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
assets/: callback-error.html  callback-success.html  styles.css
crates/smooblue-app/: CHANGELOG.md  Cargo.toml
crates/smooblue-app/src/: alt_text.rs  auth_refresh.rs  demo.rs  icons.rs  image_prep.rs  keyboard.rs  lib.rs  main.rs  ocr.rs  persistence.rs  safe_open.rs  state.rs  updates.rs
crates/smooblue-app/src/components/: column.rs  compose.rs  deck.rs  embed.rs  engagement.rs  lightbox.rs  mod.rs  notification_card.rs  post.rs  profile.rs  profile_edit_sheet.rs  report_sheet.rs  rich_text.rs  saved_feeds_sheet.rs  search_sheet.rs  settings_sheet.rs  sidebar.rs  suggestion.rs  thread.rs
crates/smooblue-app/src/views/: login.rs
crates/smooblue-app/tests/: end_to_end.rs
crates/smooblue-atproto/: CHANGELOG.md  Cargo.toml
crates/smooblue-atproto/src/: client.rs  error.rs  feed.rs  lib.rs  notifications.rs  richtext.rs
crates/smooblue-atproto/tests/: real_bluesky.rs
crates/smooblue-crm/: CHANGELOG.md  Cargo.toml
crates/smooblue-crm/src/: lib.rs
crates/smooblue-oauth/: CHANGELOG.md  Cargo.toml
crates/smooblue-oauth/src/: client.rs  dpop.rs  error.rs  lib.rs  loopback.rs  metadata.rs  pkce.rs  refresh.rs  session.rs
crates/smooblue-oauth/tests/: oauth_e2e.rs
crates/smooblue-theme/: CHANGELOG.md  Cargo.toml
crates/smooblue-theme/src/: lib.rs
docs/: Home.md  perf-notes.md
docs/.obsidian/snippets/: smoo-brand.css
docs/Architecture/: Architecture-Overview.md  OAuth-and-Session.md
docs/Decisions/: ADR-001-Session-File-vs-Keychain.md  ADR-002-Safe-Open-Allowlist.md  ADR-003-Publish-False-Workspace-Wide.md  ADR-Index.md
docs/Engineering/: Adding-a-Column-Type.md  Adding-an-XRPC-Endpoint.md  Demo-Mode.md  Engineering-Guide.md
docs/Operations/: Auto-Updater.md  Branch-Protection.md  Bundle-and-Install.md  Operations-Overview.md
docs/Projects/: Status-2026-05-25-1100-1.0-cut.md  _Projects-Index.md
docs/Security/: Security.md
docs/Start-Here/: Onboarding.md
docs/_meta/: README.md
docs/_templates/: ADR-Template.md  Feature-Page-Template.md
packaging/: smooblue.desktop
scripts/: ai.smoo.smooblue.updater.plist.template  build-icons.sh  build-release-notes.sh  bundle-macos.sh  ci-tag-and-push.sh  release.sh  sign-and-notarize-macos.sh  smooblue-update.sh  sync-cargo-version.mjs
