[workspace]
resolver = "2"
members = [
    "crates/smooblue-app",
    "crates/smooblue-atproto",
    "crates/smooblue-crm",
    "crates/smooblue-oauth",
    "crates/smooblue-theme",
]

[workspace.package]
version = "1.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/SmooAI/smooblue"
homepage = "https://github.com/SmooAI/smooblue"
authors = ["Smoo AI <eng@smoo.ai>"]
rust-version = "1.80"

[workspace.dependencies]
# Internal
smooblue-app = { path = "crates/smooblue-app" }
smooblue-atproto = { path = "crates/smooblue-atproto" }
smooblue-crm = { path = "crates/smooblue-crm" }
smooblue-oauth = { path = "crates/smooblue-oauth" }
smooblue-theme = { path = "crates/smooblue-theme" }

# SmooAI Rust packages
smooai-config = "6"
smooai-logger = "4"
smooai-fetch = "3"
# Shared design system — OKLCH tokens, base CSS, monogram SVG. Pulled
# from git until it ships to crates.io; the path-dep override is the
# escape hatch when iterating locally on the design system.
smooai-ui = { git = "https://github.com/SmooAI/ui.git", branch = "main" }
# smooai-observability — not yet published to crates.io; tracked as a
# follow-up pearl. Add back when v0.1+ ships.

# Dioxus desktop UI
dioxus = { version = "0.6", features = ["desktop", "router"] }
dioxus-desktop = "0.6"
# Lucide icons — one consistent stroke-style set across the app
# (sidebar, post actions, notification reasons, compose, etc).
# Pinned at 0.9 because 0.10 jumped to dioxus 0.7 (Component<T> generic
# trait changed, rsx! can no longer infer T). Bump together with dioxus.
dioxus-free-icons = { version = "=0.9", features = ["lucide"] }

# Async / runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP / network
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
url = { version = "2", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OAuth / crypto
p256 = { version = "0.13", features = ["jwk", "ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"

# Persistence
keyring = "3"
directories = "5"

# Synchronization — parking_lot's Mutex skips std's poison concept,
# which means we don't have to `.lock().unwrap()` everywhere and risk
# a panic-in-flight poisoning the lock forever. Used by AtClient for
# its shared session state.
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"

# Image rendering (avatars, embeds) — only needed if not relying on webview
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# Native file picker — used by the compose sheet for the "+ Image" action.
# rfd defaults to `xdg-portal` + `async-std` on Linux. We're a tokio app —
# leaving both runtimes enabled trips ashpd's "can't enable both async-std
# & tokio features at once" compile-error on the Linux release build.
# Pin to the tokio backend explicitly. macOS uses the native NSOpenPanel
# path so these features are no-ops there.
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }

# Cross-platform clipboard read — used by the compose sheet to paste
# images from the system clipboard (⌘V). Bypasses Wry's DragDrop
# limitation around NSFilePromise items (macOS screenshot floater),
# and gives "paste a screenshot" UX everywhere. `image-data` returns
# raw RGBA8 which we then PNG-encode via the existing `image` crate.
arboard = { version = "3", features = ["image-data"] }

# Apple Vision OCR (macOS only). Used by the compose sheet to extract
# literal text from screenshots / memes and seed alt-text alongside
# the LLM scene description.
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-vision = { version = "0.3", features = [
    "VNRequest",
    "VNRequestHandler",
    "VNRecognizeTextRequest",
    "VNObservation",
    "VNTypes",
] }

# Test utilities
wiremock = "0.6"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
