[package]
name = "smooblue-atproto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thin XRPC client for ATproto + Bluesky AppView, signing every request with DPoP."

[lib]
path = "src/lib.rs"

[dependencies]
smooblue-oauth = { workspace = true }
smooai-fetch = { workspace = true }
smooai-logger = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
