[package]
name = "smooblue-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bluesky / ATproto OAuth client: PAR + PKCE + DPoP, with a loopback redirect server for desktop."

[lib]
path = "src/lib.rs"

[dependencies]
smooai-fetch = { workspace = true }
smooai-logger = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

p256 = { workspace = true }
ecdsa = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }

chrono = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
